5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1642_2449.log
== TEST (2019-04-16 14:50:49) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:52:24) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:52:43) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:52:49) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:55:23) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	msg= "Nao tem solucao"
print(x)
print(y)
-- EXECUTION TIME:
0.225239
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-100.0
-100.0
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-126.9090909090909
-137.54545454545453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-5373.958333333333
-5376.0625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:56:06) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	msg= "Nao tem solucao"
   print(x)
   print(y)
-- EXECUTION TIME:
0.136057
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:56:54) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	msg= "Nao tem solucao"
else:
   print(x)
   print(y)
-- EXECUTION TIME:
0.128197
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:

-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-126.9090909090909
-137.54545454545453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-5373.958333333333
-5376.0625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:57:25) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
   print(x)
   print(y)
-- EXECUTION TIME:
0.141953
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-126.9090909090909
-137.54545454545453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-5373.958333333333
-5376.0625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:57:48) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
print(x)
print(y)
-- ERROR:
File "XXXX", line 12
    print(x)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:58:00) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
   print(x)
   print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:58:06) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/(a*e)-(b*d)
y=((a*f)-(b*f))/(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
   print(x)
   print(y)
-- EXECUTION TIME:
0.201524
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-126.9090909090909
-137.54545454545453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-5373.958333333333
-5376.0625
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:19:37) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))//(a*e)-(b*d)
y=((a*f)-(b*f))//(a*e)-(b*d)
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
   print(x)
   print(y)
-- EXECUTION TIME:
0.808182
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-127.0
-138.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
a:b:c:d:e:f:-5374.0
-5377.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:20:06) 
-- CODE:
a=float(input("a:"))
b=float(input("b:"))
c=float(input("c:"))
d=float(input("d:"))
e=float(input("e:"))
f=float(input("f:"))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(b*f))/((a*e)-(b*d))
if((a*e)-(b*d) == 0):
	print("Nao tem solucao")
else:
   print(x)
   print(y)
-- EXECUTION TIME:
0.86577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
